8233111: Epoch shift synchronization point for Compiler threads

Reviewed-by: egahlin