src/hotspot/share/jfr/recorder/checkpoint/jfrCheckpointManager.hpp
@@ -88,8 +88,10 @@ class JfrCheckpointManager : public JfrCHeapObj {
   void write_type_set();
   static void write_type_set_for_unloaded_classes();
 
-  void shift_epoch();
-  void synchronize_epoch();
+  void begin_epoch_shift();
+  void end_epoch_shift();
+  void synchronize_checkpoint_manager_with_current_epoch();
+
   void notify_threads();
 
   JfrCheckpointManager(JfrChunkWriter& cw);
